--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,9 @@ jobs:
 
     - name: Build
       uses: izumin5210/actions-go-crossbuild@master
+      with:
+        name: pubsubcli
+        package: ./cmd/pubsubcli
 
     - uses: actions/upload-artifact@master
       with:
