--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
         go mod download
 
     - name: Build
-      uses: izumin5210/actions-go-crossbuild@master
+      uses: izumin5210/actions-go-crossbuild@v1
       with:
         package: ./cmd/pubsubcli
 
