--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,5 +35,6 @@ jobs:
       with:
         files: './dist/*'
         prerelease: true
+      if: startsWith(github.ref, 'refs/tags/')
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
