--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,11 +30,19 @@ jobs:
         name: pubsubcli
         path: dist
 
-    - name: Nightly release
+    - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
         files: './dist/*'
-        prerelease: true
       if: startsWith(github.ref, 'refs/tags/')
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Update Homebrew Formula
+      uses: izumin5210/homebrew@releases/v0
+      with:
+        tap: izumin5210/homebrew-tools
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tap-token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+        tap-branch: dev
+      if: startsWith(github.ref, 'refs/tags/')
