--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,6 +43,6 @@ jobs:
       with:
         tap: izumin5210/homebrew-tools
         token: ${{ secrets.GITHUB_TOKEN }}
-        tap-token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+        tap-token: ${{ secrets.TAP_GITHUB_TOKEN }}
         tap-branch: dev
       if: startsWith(github.ref, 'refs/tags/')
